--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -14,9 +14,50 @@
 </head>
 
     <body>
-    <!-- Remove this line the first time you edit this file -->
-     This is the index page of your Django app!
+
     <!--Add a nav bar here -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">My Site</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://castellanoto-8000.theiadocker-1-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai/djangoapp/about">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://castellanoto-8000.theiadocker-1-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai/djangoapp/contact">Contact</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav">
+
+                {% if user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
+                    <a class="btn btn-link" href="{% url  'djangoapp:logout' %}">Logout</a>
+               </li>
+               {% else %}
+
+                <li class="nav-item">
+                    <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
+                        {% csrf_token %}
+                        <div class="input-group">
+                             <input type="text" class="form-control" placeholder="Username" name="username" >
+                             <input type="password" class="form-control" placeholder="Password" name="psw" >
+                             <button class="btn btn-primary" type="submit">Login</button>
+                             <a class="btn btn-link" href="{% url 'djangoapp:registration' %}">Sign Up</a>
+                        </div>
+                     </form>
+                </li>
+                {% endif %}
+              
+            </ul>
+        </div>
+    </nav>
 
     <!--Add a dealer table here -->
 
